# yet-another-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: fetcher.py  main.py
app/utils/: utils.py
src/yet_another_downloader/: __init__.py  fetcher.py  main.py
src/yet_another_downloader/utils/: __init__.py  utils.py
tests/: test.py
