[project]
name = "yet-another-downloader"
version = "0.1.2"
description = ""
authors = [
    { name = "yourdisenchantment", email = "p.idisenchantment@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "stealth-requests (>=2.0.4,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)"
]
[tool.poetry]
packages = [
    { include = "yet_another_downloader", from = "src" }
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
setuptools = "^80.9.0"
